<resources>
    <string name="app_name">CSPrepGuide</string>
    <string name="title_activity_navigation_cs">CS PrepGuide</string>
    <string name="filter_activity">Filter</string>
    <string name="test_string">testString</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password_toast_text"> An email has has been sent which has steps to reset your password</string>
    <string name="facebook_app_id">1958233554393369</string>
    <string name="fb_login_protocol_scheme">fb1958233554393369</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="btnapplyFilter">Apply Filter</string>
    <string-array name="stream_array">
        <item>Select Stream</item>
        <item>All</item>
        <item>Network Security</item>
        <item>Artificial Intelligence</item>
        <item>Computer Architecture</item>
        <item>Computer Graphics</item>
        <item>Database</item>
        <item>Software Engineering</item>
        <item>Data Structures</item>
        <item>Algorithms</item>
    </string-array>
    <string-array name="company_array">
        <item>Company</item>
        <item>All</item>
        <item>Google</item>
        <item>Facebook</item>
        <item>Amazon</item>
        <item>Microsoft</item>
        <item>Dell</item>
    </string-array>
    <string-array name="type_array">
        <item>Position Type</item>
        <item>All</item>
        <item>Developer</item>
        <item>Project Manager</item>
        <item>Testing</item>
    </string-array>

    <string-array name="jobList">
        <item>Project Manager</item>
        <item>Team Lead</item>
        <item>Developer</item>
        <item>Network Security Specialist</item>
        <item>AI Expert</item>
        <item>Computer Architecture</item>
        <item>Computer Graphics</item>
        <item>Database</item>
        <item>Software Engineering</item>
        <item>Data Structures</item>
        <item>Algorithms</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name: </string>
    <string name="btnSave"><![CDATA[EDIT & SAVE]]></string>
    <string name="add_skill">ADD Skill</string>
    <string name="enter_your_technical_skills">Enter Your Technical Skills</string>
    <string name="upload_photo">upload photo</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="web_client_id_for_google">417200596169-kn9l0dmgtk0g9dnqfr53mi3vj8m4r1iv.apps.googleusercontent.com</string>
    <string name="permissions_required_for_the_app">PERMISSIONS REQUIRED FOR THE APP</string>
    <string name="help_fragment">Help Fragment</string>
    <string name="_1_camera_n2_storage">1.CAMERA  2.Storage</string>
    <string name="help_section">HELP SECTION</string>
    <string name="login_help">Login Help</string>
    <string name="camera_issue">Camera Issue</string>
    <string name="send">Send</string>
    <string name="delete">delete</string>
    <string name="editComment">edit</string>
    <string name="apply_filter">Apply Filter</string>
</resources>
