<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.dal.cs.web.cs_prepguide.MainActivity">


    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtPassword"
        android:layout_alignStart="@+id/txtPassword"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignStart="@+id/txtPassword"
        android:layout_centerVertical="true"
        android:text="@string/login"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignTop="@+id/login_button"
        android:layout_marginTop="43dp"
        android:text="@string/register"
        android:textAllCaps="false" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtPassword"
        android:layout_below="@+id/txtPassword" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_below="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/txtPassword"
        android:layout_alignEnd="@+id/txtPassword"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:text="CS-PrepGuide"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnRegister"
        android:layout_alignBottom="@+id/btnRegister"
        android:layout_alignEnd="@+id/textView2"
        android:text="Forgot Pwd" />


</RelativeLayout>
