<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.dal.cs.web.cs_prepguide.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="ca.dal.cs.web.cs_prepguide.NavigationActivityCS">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue">

            <!-- Reference: https://stackoverflow.com/questions/22105775/imageview-in-circular-through-xml  -->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ProfilePic"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dp" />

            <Button
                android:id="@+id/btnUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ProfilePic"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-17dp"
                android:background="@drawable/transparent_color"
                android:text="@string/upload_photo"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />


            <!--<LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnUpload"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginTop="7dp">-->
            <!--
                            <TextView
                                android:id="@+id/email"
                                android:layout_width="99dp"
                                android:layout_height="wrap_content"
                                android:text="Email: "
                                android:textAlignment="viewEnd"
                                android:textColor="#FFF"
                                android:textSize="20sp" />-->

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnUpload"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <!-- </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/userEmail"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- <TextView
                    android:layout_width="99dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:textColor="#FFF"
                    android:textAlignment="viewEnd" />-->

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="Your name here"
                    android:inputType="textPersonName"
                    android:textColor="#FFF"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/transparent_color"
                    android:text="@string/edit"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextBox" />


            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/fingerPrintSwitch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="Use Fingerprint to login" />

        </LinearLayout>

        <TextView
            android:id="@+id/skills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/enter_your_technical_skills" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/skillsEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.8"
                android:ems="15">

            </EditText>

            <Button
                android:id="@+id/addSkill"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_weight="0.2"
                android:background="@drawable/button_rounded"
                android:text="@string/add_skill"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="Skills Added :"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/skillsList1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />


        <!--<Button-->
        <!--android:id="@+id/btnProfileSend"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:text="Done" />-->


    </LinearLayout>

</FrameLayout>
